fonts, images, vars (colors)

--- a/app/index.html
+++ b/app/index.html
@@ -11,9 +11,15 @@
 </head>
 <body>
 	<div class="site-container">
-		@include('html/header.html')
-		@include('html/footer.html')
-		<!-- @include('html/h1.html') пример инклуда -->
+		<header class="header">
+  <div class="container"></div>
+</header>
+
+		<footer class="footer">
+	<div class="container"></div>
+</footer>
+
+		
 	</div>
 	<script src="js/main.js"></script>
 </body>
