--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -1,3 +1,12 @@
 <footer class="footer">
-	<div class="container"></div>
+  <div class="container footer__container">
+    <a href="#" class="footer__logo logo">
+      <img src="img/logo.png" alt="Логотип Blanchard">
+    </a>
+    <div class="footer__social footer-social">
+      <a href="https://vk.com" class="footer-social__link footer-social__link--vk" target="_blank"></a>
+      <a href="https://instagram.com" class="footer-social__link footer-social__link--instagram" target="_blank"></a>
+      <a href="https://fb.com" class="footer-social__link footer-social__link--fb" target="_blank"></a>
+    </div>
+  </div>
 </footer>
