--- a/src/html/catalog.html
+++ b/src/html/catalog.html
@@ -50,19 +50,16 @@
             <li class="accordion__item"><a href="#" class="accordion__link">Брамантино</a></li>
             <li class="accordion__item"><a href="#" class="accordion__link">Бреа, Людовико</a></li>
             <li class="accordion__item"><a href="#" class="accordion__link">Бьяджо д’Антонио Туччи</a></li>
-          </ul>
-          <ul class="accordion__list">
             <li class="accordion__item"><a href="#" class="accordion__link">Веккьетта</a></li>
             <li class="accordion__item"><a href="#" class="accordion__link">Андреа Верроккьо</a></li>
-            <li class="accordion__item"><a href="#" class="accordion__link accordion__link--active">Доменико Гирландайо</a></li>
+            <li class="accordion__item"><a href="#" class="accordion__link accordion__link--active">Доменико
+              Гирландайо</a></li>
             <li class="accordion__item"><a href="#" class="accordion__link">Беноццо Гоццоли</a></li>
             <li class="accordion__item"><a href="#" class="accordion__link">Граначчи, Франческо</a></li>
             <li class="accordion__item"><a href="#" class="accordion__link">Грегорио ди Чекко</a></li>
             <li class="accordion__item"><a href="#" class="accordion__link">Джованни да Удине</a></li>
             <li class="accordion__item"><a href="#" class="accordion__link">Джованни ди Паоло</a></li>
             <li class="accordion__item"><a href="#" class="accordion__link">Джорджоне</a></li>
-          </ul>
-          <ul class="accordion__list">
             <li class="accordion__item"><a href="#" class="accordion__link">Парентино, Бернардо</a></li>
             <li class="accordion__item"><a href="#" class="accordion__link">Пезеллино</a></li>
             <li class="accordion__item"><a href="#" class="accordion__link">Пьетро Перуджино</a></li>
@@ -87,8 +84,6 @@
             <li class="accordion__item"><a href="#" class="accordion__link">Брамантино</a></li>
             <li class="accordion__item"><a href="#" class="accordion__link">Бреа, Людовико</a></li>
             <li class="accordion__item"><a href="#" class="accordion__link">Бьяджо д’Антонио Туччи</a></li>
-          </ul>
-          <ul class="accordion__list">
             <li class="accordion__item"><a href="#" class="accordion__link">Веккьетта</a></li>
             <li class="accordion__item"><a href="#" class="accordion__link">Андреа Верроккьо</a></li>
             <li class="accordion__item"><a href="#" class="accordion__link">Доменико Гирландайо</a></li>
@@ -98,8 +93,6 @@
             <li class="accordion__item"><a href="#" class="accordion__link">Джованни да Удине</a></li>
             <li class="accordion__item"><a href="#" class="accordion__link">Джованни ди Паоло</a></li>
             <li class="accordion__item"><a href="#" class="accordion__link">Джорджоне</a></li>
-          </ul>
-          <ul class="accordion__list">
             <li class="accordion__item"><a href="#" class="accordion__link">Парентино, Бернардо</a></li>
             <li class="accordion__item"><a href="#" class="accordion__link">Пезеллино</a></li>
             <li class="accordion__item"><a href="#" class="accordion__link">Пьетро Перуджино</a></li>
@@ -124,8 +117,6 @@
             <li class="accordion__item"><a href="#" class="accordion__link">Брамантино</a></li>
             <li class="accordion__item"><a href="#" class="accordion__link">Бреа, Людовико</a></li>
             <li class="accordion__item"><a href="#" class="accordion__link">Бьяджо д’Антонио Туччи</a></li>
-          </ul>
-          <ul class="accordion__list">
             <li class="accordion__item"><a href="#" class="accordion__link">Веккьетта</a></li>
             <li class="accordion__item"><a href="#" class="accordion__link">Андреа Верроккьо</a></li>
             <li class="accordion__item"><a href="#" class="accordion__link">Доменико Гирландайо</a></li>
@@ -135,8 +126,6 @@
             <li class="accordion__item"><a href="#" class="accordion__link">Джованни да Удине</a></li>
             <li class="accordion__item"><a href="#" class="accordion__link">Джованни ди Паоло</a></li>
             <li class="accordion__item"><a href="#" class="accordion__link">Джорджоне</a></li>
-          </ul>
-          <ul class="accordion__list">
             <li class="accordion__item"><a href="#" class="accordion__link">Парентино, Бернардо</a></li>
             <li class="accordion__item"><a href="#" class="accordion__link">Пезеллино</a></li>
             <li class="accordion__item"><a href="#" class="accordion__link">Пьетро Перуджино</a></li>
@@ -161,8 +150,6 @@
             <li class="accordion__item"><a href="#" class="accordion__link">Брамантино</a></li>
             <li class="accordion__item"><a href="#" class="accordion__link">Бреа, Людовико</a></li>
             <li class="accordion__item"><a href="#" class="accordion__link">Бьяджо д’Антонио Туччи</a></li>
-          </ul>
-          <ul class="accordion__list">
             <li class="accordion__item"><a href="#" class="accordion__link">Веккьетта</a></li>
             <li class="accordion__item"><a href="#" class="accordion__link">Андреа Верроккьо</a></li>
             <li class="accordion__item"><a href="#" class="accordion__link">Доменико Гирландайо</a></li>
@@ -172,8 +159,6 @@
             <li class="accordion__item"><a href="#" class="accordion__link">Джованни да Удине</a></li>
             <li class="accordion__item"><a href="#" class="accordion__link">Джованни ди Паоло</a></li>
             <li class="accordion__item"><a href="#" class="accordion__link">Джорджоне</a></li>
-          </ul>
-          <ul class="accordion__list">
             <li class="accordion__item"><a href="#" class="accordion__link">Парентино, Бернардо</a></li>
             <li class="accordion__item"><a href="#" class="accordion__link">Пезеллино</a></li>
             <li class="accordion__item"><a href="#" class="accordion__link">Пьетро Перуджино</a></li>
@@ -198,8 +183,6 @@
             <li class="accordion__item"><a href="#" class="accordion__link">Брамантино</a></li>
             <li class="accordion__item"><a href="#" class="accordion__link">Бреа, Людовико</a></li>
             <li class="accordion__item"><a href="#" class="accordion__link">Бьяджо д’Антонио Туччи</a></li>
-          </ul>
-          <ul class="accordion__list">
             <li class="accordion__item"><a href="#" class="accordion__link">Веккьетта</a></li>
             <li class="accordion__item"><a href="#" class="accordion__link">Андреа Верроккьо</a></li>
             <li class="accordion__item"><a href="#" class="accordion__link">Доменико Гирландайо</a></li>
@@ -209,8 +192,6 @@
             <li class="accordion__item"><a href="#" class="accordion__link">Джованни да Удине</a></li>
             <li class="accordion__item"><a href="#" class="accordion__link">Джованни ди Паоло</a></li>
             <li class="accordion__item"><a href="#" class="accordion__link">Джорджоне</a></li>
-          </ul>
-          <ul class="accordion__list">
             <li class="accordion__item"><a href="#" class="accordion__link">Парентино, Бернардо</a></li>
             <li class="accordion__item"><a href="#" class="accordion__link">Пезеллино</a></li>
             <li class="accordion__item"><a href="#" class="accordion__link">Пьетро Перуджино</a></li>
@@ -235,8 +216,6 @@
             <li class="accordion__item"><a href="#" class="accordion__link">Брамантино</a></li>
             <li class="accordion__item"><a href="#" class="accordion__link">Бреа, Людовико</a></li>
             <li class="accordion__item"><a href="#" class="accordion__link">Бьяджо д’Антонио Туччи</a></li>
-          </ul>
-          <ul class="accordion__list">
             <li class="accordion__item"><a href="#" class="accordion__link">Веккьетта</a></li>
             <li class="accordion__item"><a href="#" class="accordion__link">Андреа Верроккьо</a></li>
             <li class="accordion__item"><a href="#" class="accordion__link">Доменико Гирландайо</a></li>
@@ -246,8 +225,6 @@
             <li class="accordion__item"><a href="#" class="accordion__link">Джованни да Удине</a></li>
             <li class="accordion__item"><a href="#" class="accordion__link">Джованни ди Паоло</a></li>
             <li class="accordion__item"><a href="#" class="accordion__link">Джорджоне</a></li>
-          </ul>
-          <ul class="accordion__list">
             <li class="accordion__item"><a href="#" class="accordion__link">Парентино, Бернардо</a></li>
             <li class="accordion__item"><a href="#" class="accordion__link">Пезеллино</a></li>
             <li class="accordion__item"><a href="#" class="accordion__link">Пьетро Перуджино</a></li>
@@ -272,8 +249,6 @@
             <li class="accordion__item"><a href="#" class="accordion__link">Брамантино</a></li>
             <li class="accordion__item"><a href="#" class="accordion__link">Бреа, Людовико</a></li>
             <li class="accordion__item"><a href="#" class="accordion__link">Бьяджо д’Антонио Туччи</a></li>
-          </ul>
-          <ul class="accordion__list">
             <li class="accordion__item"><a href="#" class="accordion__link">Веккьетта</a></li>
             <li class="accordion__item"><a href="#" class="accordion__link">Андреа Верроккьо</a></li>
             <li class="accordion__item"><a href="#" class="accordion__link">Доменико Гирландайо</a></li>
@@ -283,8 +258,6 @@
             <li class="accordion__item"><a href="#" class="accordion__link">Джованни да Удине</a></li>
             <li class="accordion__item"><a href="#" class="accordion__link">Джованни ди Паоло</a></li>
             <li class="accordion__item"><a href="#" class="accordion__link">Джорджоне</a></li>
-          </ul>
-          <ul class="accordion__list">
             <li class="accordion__item"><a href="#" class="accordion__link">Парентино, Бернардо</a></li>
             <li class="accordion__item"><a href="#" class="accordion__link">Пезеллино</a></li>
             <li class="accordion__item"><a href="#" class="accordion__link">Пьетро Перуджино</a></li>
