--- a/src/html/projects.html
+++ b/src/html/projects.html
@@ -28,8 +28,8 @@
 
 
       <div class="projects__slider projects-slider">
-        <div class="swiper-button-prev projects-slider__prev-btn"></div>
-        <div class="swiper-button-next projects-slider__next-btn"></div>
+        <div class="pagination-block__button-prev swiper-button-prev projects-slider__prev-btn"></div>
+        <div class="pagination-block__button-next swiper-button-next projects-slider__next-btn"></div>
         <div class="swiper-wrapper projects-slider__wrapper">
           <div class="swiper-slide projects-slider__slide projects-slider__slide--1">
           </div>
