--- a/src/index.html
+++ b/src/index.html
@@ -12,14 +12,16 @@
 <body>
 <div class="site-container">
   @include('html/header.html')
-  @include('html/hero.html')
-  @include('html/about.html')
-  @include('html/gallery.html')
-  @include('html/catalog.html')
-  @include('html/events.html')
-  @include('html/editions.html')
-  @include('html/projects.html')
-  @include('html/contacts.html')
+  <main>
+    @include('html/hero.html')
+    @include('html/about.html')
+    @include('html/gallery.html')
+    @include('html/catalog.html')
+    @include('html/events.html')
+    @include('html/editions.html')
+    @include('html/projects.html')
+    @include('html/contacts.html')
+  </main>
   @include('html/footer.html')
 </div>
 <script src="js/main.js"></script>
