--- a/src/html/events.html
+++ b/src/html/events.html
@@ -1,135 +1,138 @@
 <section class="events">
   <div class="container events__container">
     <h2 class="events__title title">События</h2>
-    <ul class="events__list">
-      <li class="events__item event">
-        <img src="img/events/events-1.jpg" alt="Музей им. Щусева" class="event__img">
-        <div class="event__about">
-          <div class="event__spans">
-            <span class="event__place descr">Музей им. Щусева</span>
-            <span class="event__date descr">с 20 марта по 30 апреля</span>
-          </div>
-          <div class="event__descr event-descr">
-            <div class="event-descr__top">
-              <h3 class="event__title subtitle">Книжная гравюра в живом восприятии</h3>
-              <p class="text event__text">
-                Один из ведущих флорентийских художников Кватроченто, основатель художественной династии, которую
-                продолжили
-                его брат Давид и сын Ридольфо. Глава художественной мастерской, где юный Микеланджело.
-              </p>
+    <div class="swiper-container events-slider">
+      <ul class="events__list swiper-wrapper events-slider__wrapper">
+        <li class="events__item event swiper-slide">
+          <img src="img/events/events-1.jpg" alt="Музей им. Щусева" class="event__img">
+          <div class="event__about">
+            <div class="event__spans">
+              <span class="event__place descr">Музей им. Щусева</span>
+              <span class="event__date descr">с 20 марта по 30 апреля</span>
             </div>
-            <div class="event-descr__bottom">
-              <a href="#" class="event__link">Подробнее</a>
-            </div>
-          </div>
-        </div>
-      </li>
-      <li class="events__item event">
-        <img src="img/events/events-2.jpg" alt="ММОМА" class="event__img">
-        <div class="event__about">
-          <div class="event__spans">
-            <span class="event__place descr">ММОМА</span>
-            <span class="event__date descr">24 марта 19:00</span>
-          </div>
-          <div class="event__descr event-descr">
-            <div class="event-descr__top">
-              <h3 class="event__title subtitle">«Открытая дискуссия». Дмитрий Петров и Сергей Ильин.</h3>
-              <p class="text event__text">Высокий уровень вовлечения представителей целевой аудитории является четким
-                доказательством простого факта: постоянный количественный рост и сфера нашей активности представляет
-                собой
-                интересный эксперимент проверки новых принципов формирования...</p>
-            </div>
-            <div class="event-descr__bottom">
-              <a href="#" class="event__link">Подробнее</a>
+            <div class="event__descr event-descr">
+              <div class="event-descr__top">
+                <h3 class="event__title subtitle">Книжная гравюра в живом восприятии</h3>
+                <p class="text event__text">
+                  Один из ведущих флорентийских художников Кватроченто, основатель художественной династии, которую
+                  продолжили
+                  его брат Давид и сын Ридольфо. Глава художественной мастерской, где юный Микеланджело.
+                </p>
+              </div>
+              <div class="event-descr__bottom">
+                <a href="#" class="event__link">Подробнее</a>
+              </div>
             </div>
           </div>
-        </div>
-      </li>
-      <li class="events__item event">
-        <img src="img/events/events-3.jpg" alt="Еврейский музей" class="event__img">
-        <div class="event__about">
-          <div class="event__spans">
-            <span class="event__place descr">Еврейский музей</span>
-            <span class="event__date descr">с 31 марта по 21 апреля</span>
-          </div>
-          <div class="event__descr event-descr">
-            <div class="event-descr__top">
-              <h3 class="event__title subtitle">Выставка «Формация 2020»</h3>
-              <p class="text event__text">Идейные соображения высшего порядка, а также современная методология
-                разработки
-                играет важную роль в формировании глубокомысленных рассуждений. Также как перспективное планирование
-                играет определяющее значение для новых принципов формирования материально-технической и кадровой
-                базы.</p>
+        </li>
+        <li class="events__item event swiper-slide">
+          <img src="img/events/events-2.jpg" alt="ММОМА" class="event__img">
+          <div class="event__about">
+            <div class="event__spans">
+              <span class="event__place descr">ММОМА</span>
+              <span class="event__date descr">24 марта 19:00</span>
             </div>
-            <div class="event-descr__bottom">
-              <a href="#" class="event__link">Подробнее</a>
-            </div>
-          </div>
-        </div>
-      </li>
-      <li class="events__item event event--hidden">
-        <img src="img/events/events-3.jpg" alt="Еврейский музей" class="event__img">
-        <div class="event__about">
-          <div class="event__spans">
-            <span class="event__place descr">Еврейский музей</span>
-            <span class="event__date descr">с 31 марта по 21 апреля</span>
-          </div>
-          <div class="event__descr event-descr">
-            <div class="event-descr__top">
-              <h3 class="event__title subtitle">Выставка «Формация 2020»</h3>
-              <p class="text event__text">Идейные соображения высшего порядка, а также современная методология
-                разработки
-                играет важную роль в формировании глубокомысленных рассуждений. Также как перспективное планирование
-                играет определяющее значение для новых принципов формирования материально-технической и кадровой
-                базы.</p>
-            </div>
-            <div class="event-descr__bottom">
-              <a href="#" class="event__link">Подробнее</a>
+            <div class="event__descr event-descr">
+              <div class="event-descr__top">
+                <h3 class="event__title subtitle">«Открытая дискуссия». Дмитрий Петров и Сергей Ильин.</h3>
+                <p class="text event__text">Высокий уровень вовлечения представителей целевой аудитории является четким
+                  доказательством простого факта: постоянный количественный рост и сфера нашей активности представляет
+                  собой
+                  интересный эксперимент проверки новых принципов формирования...</p>
+              </div>
+              <div class="event-descr__bottom">
+                <a href="#" class="event__link">Подробнее</a>
+              </div>
             </div>
           </div>
-        </div>
-      </li>
-      <li class="events__item event event--hidden">
-        <img src="img/events/events-4.jpg" alt="Третьяковка на Крымском валу" class="event__img">
-        <div class="event__about">
-          <div class="event__spans">
-            <span class="event__place descr">Третьяковка на Крымском валу</span>
-            <span class="event__date descr">с 30 марта по 30 апреля</span>
-          </div>
-          <div class="event__descr event-descr">
-            <div class="event-descr__top">
-              <h3 class="event__title subtitle">XXIV Международная биеннале молодого искусства</h3>
-              <p class="text event__text">Внезапно, реплицированные с зарубежных источников, современные исследования
-                представляют собой не что иное, как квинтэссенцию победы маркетинга над разумом и должны быть
-                рассмотрены исключительно в разрезе маркетинговых и финансовых...</p>
+        </li>
+        <li class="events__item event  swiper-slide">
+          <img src="img/events/events-3.jpg" alt="Еврейский музей" class="event__img">
+          <div class="event__about">
+            <div class="event__spans">
+              <span class="event__place descr">Еврейский музей</span>
+              <span class="event__date descr">с 31 марта по 21 апреля</span>
             </div>
-            <div class="event-descr__bottom">
-              <a href="#" class="event__link">Подробнее</a>
-            </div>
-          </div>
-        </div>
-      </li>
-      <li class="events__item event event--hidden">
-        <img src="img/events/events-5.jpg" alt="ММАМ" class="event__img">
-        <div class="event__about">
-          <div class="event__spans">
-            <span class="event__place descr">ММАМ</span>
-            <span class="event__date descr">с 8 апреля по 20 мая</span>
-          </div>
-          <div class="event__descr event-descr">
-            <div class="event-descr__top">
-              <h3 class="event__title subtitle">Джон Винзор. Фотографии из серии «Метафора серебра»</h3>
-              <p class="text event__text">Один из ведущих флорентийских художников Кватроченто, основатель
-                художественной династии, которую продолжили его брат Давид и сын Ридольфо. Глава художественной
-                мастерской, где юный Микеланджело.</p>
-            </div>
-            <div class="event-descr__bottom">
-              <a href="#" class="event__link">Подробнее</a>
+            <div class="event__descr event-descr">
+              <div class="event-descr__top">
+                <h3 class="event__title subtitle">Выставка «Формация 2020»</h3>
+                <p class="text event__text">Идейные соображения высшего порядка, а также современная методология
+                  разработки
+                  играет важную роль в формировании глубокомысленных рассуждений. Также как перспективное планирование
+                  играет определяющее значение для новых принципов формирования материально-технической и кадровой
+                  базы.</p>
+              </div>
+              <div class="event-descr__bottom">
+                <a href="#" class="event__link">Подробнее</a>
+              </div>
             </div>
           </div>
-        </div>
-      </li>
-    </ul>
+        </li>
+        <li class="events__item event  swiper-slide">
+          <img src="img/events/events-3.jpg" alt="Еврейский музей" class="event__img">
+          <div class="event__about">
+            <div class="event__spans">
+              <span class="event__place descr">Еврейский музей</span>
+              <span class="event__date descr">с 31 марта по 21 апреля</span>
+            </div>
+            <div class="event__descr event-descr">
+              <div class="event-descr__top">
+                <h3 class="event__title subtitle">Выставка «Формация 2020»</h3>
+                <p class="text event__text">Идейные соображения высшего порядка, а также современная методология
+                  разработки
+                  играет важную роль в формировании глубокомысленных рассуждений. Также как перспективное планирование
+                  играет определяющее значение для новых принципов формирования материально-технической и кадровой
+                  базы.</p>
+              </div>
+              <div class="event-descr__bottom">
+                <a href="#" class="event__link">Подробнее</a>
+              </div>
+            </div>
+          </div>
+        </li>
+        <li class="events__item event  swiper-slide">
+          <img src="img/events/events-4.jpg" alt="Третьяковка на Крымском валу" class="event__img">
+          <div class="event__about">
+            <div class="event__spans">
+              <span class="event__place descr">Третьяковка на Крымском валу</span>
+              <span class="event__date descr">с 30 марта по 30 апреля</span>
+            </div>
+            <div class="event__descr event-descr">
+              <div class="event-descr__top">
+                <h3 class="event__title subtitle">XXIV Международная биеннале молодого искусства</h3>
+                <p class="text event__text">Внезапно, реплицированные с зарубежных источников, современные исследования
+                  представляют собой не что иное, как квинтэссенцию победы маркетинга над разумом и должны быть
+                  рассмотрены исключительно в разрезе маркетинговых и финансовых...</p>
+              </div>
+              <div class="event-descr__bottom">
+                <a href="#" class="event__link">Подробнее</a>
+              </div>
+            </div>
+          </div>
+        </li>
+        <li class="events__item event swiper-slide">
+          <img src="img/events/events-5.jpg" alt="ММАМ" class="event__img">
+          <div class="event__about">
+            <div class="event__spans">
+              <span class="event__place descr">ММАМ</span>
+              <span class="event__date descr">с 8 апреля по 20 мая</span>
+            </div>
+            <div class="event__descr event-descr">
+              <div class="event-descr__top">
+                <h3 class="event__title subtitle">Джон Винзор. Фотографии из серии «Метафора серебра»</h3>
+                <p class="text event__text">Один из ведущих флорентийских художников Кватроченто, основатель
+                  художественной династии, которую продолжили его брат Давид и сын Ридольфо. Глава художественной
+                  мастерской, где юный Микеланджело.</p>
+              </div>
+              <div class="event-descr__bottom">
+                <a href="#" class="event__link">Подробнее</a>
+              </div>
+            </div>
+          </div>
+        </li>
+      </ul>
+      <div class="events-slider__pagination"></div>
+    </div>
     <button class="btn-reset btn events__btn">Все события</button>
   </div>
 </section>
