--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,9 +1,20 @@
 <header class="header">
   <div class="header__top header-top">
     <div class="container header-top__container">
+      <button class="burger btn-reset header__burger">
+        <span class="burger__line"></span>
+      </button>
       <a href="#" class="logo header-top__logo">
         <img src="img/logo.png" alt="Логотип Blanchard">
       </a>
+      <div class="search search--mobile">
+        <label for="search">
+          <svg>
+            <use xlink:href="img/sprite.svg#search"></use>
+          </svg>
+          <input type="text" class="search__input input" placeholder="Поиск по сайту">
+        </label>
+      </div>
       <nav class="nav header-top__nav">
         <ul class="nav__list">
           <li class="nav__item"><a href="#about" class="nav__link link">О нас</a></li>
@@ -118,7 +129,6 @@
           </svg>
           <input type="text" id="search" class="search__input input" placeholder="Поиск по сайту">
         </label>
-
       </div>
     </div>
   </div>
