--- a/src/html/hero.html
+++ b/src/html/hero.html
@@ -1,8 +1,15 @@
 <section class="hero">
-  <img src="img/hero/hero-1.jpg" alt="главное фото" class="hero__img">
+  <picture>
+    <source media="(min-width: 1025px)" srcset="img/hero/hero-1.jpg">
+    <source media="(min-width: 769px)" srcset="img/hero/hero-1-1024.jpg">
+    <source media="(min-width: 321px)" srcset="img/hero/hero-1-768.jpg">
+    <source media="(min-width: 320px)" srcset="img/hero/hero-1-320.jpg">
+    <img src="img/hero/hero-1.jpg" alt="главное фото" class="hero__img">
+  </picture>
   <div class="container hero__container">
     <h1 class="hero__title">Прикоснитесь к прекрасному</h1>
-    <p class="hero__text">Мы вынуждены отталкиваться от того, что реализация намеченных плановых заданий создаёт предпосылки для новых предложений.</p>
+    <p class="hero__text">Мы вынуждены отталкиваться от того, что реализация намеченных плановых заданий создаёт
+      предпосылки для новых предложений.</p>
     <button class="btn-reset btn hero__btn">Подписаться на рассылку</button>
   </div>
 </section>
